config: websocket security 설정 추가
클라이언트에서 websocket에 연결하기 위해 security 설정을 수정했습니다.